<resources>
    <string name="app_name">Words Decoder</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title">CODENAMES</string>
    <string name="Players">PLAYER</string>
    <string name="Spy_master">MASTER</string>
    <string name="red_num">9</string>
    <string name="blue_num">8</string>
    <string name="info">RedTurn</string>
    <string name="end_turn">END TURN</string>
    <string name="new_game">NEW GAME</string>
    <string name="Timer">TIMER</string>
    <string name="Score">SCORE</string>
    <string name="desc">IMAGE_DESC</string>
    <string name="Set_Timer">SET TIMER</string>
    <string name="start_pause">START TIMER</string>
    <string name="start_game">START GAME</string>
    <string name="blue_high">BLUE HIGH</string>
    <string name="red_high">RED HIGH</string>
    <string name="rules_text">HOW TO PLAY</string>
    <string name="receiver_id">com.WordsDecoder.myapplication</string>
    <string name="media_route_menu_title">PLAY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://devapreya.github.io/.well-known/assetlinks.json\" }]</string>
</resources>
