<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context="com.kodename.myapplication.MainActivity"    tools:layout_editor_absoluteY="25dp"    android:id="@+id/mainActivity"    android:fitsSystemWindows="true">    <RelativeLayout        android:id="@+id/header"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:id="@+id/display"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal"            android:layout_centerInParent="true">            <Button                android:id="@+id/status"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/info"                android:textColor="@color/white"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>        <TextView            android:id="@+id/redNum"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:background="@drawable/textview_border"            android:layout_margin="1dp"            android:padding="1dp"            android:textColor="@color/red"            android:textSize="@dimen/score_size"/>            <TextView                android:id="@+id/blueNum"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="1dp"                android:background="@drawable/textview_border"                android:padding="1dp"                android:textColor="@color/blue"                android:textSize="@dimen/score_size" />        </LinearLayout>        <Button            android:id="@+id/endTurn"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/end_turn"            android:layout_marginTop="4sp"            android:layout_marginRight="8dp"            android:layout_alignParentStart="true"            android:layout_alignParentLeft="true"            android:textColor="@color/white"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>       <android.support.v7.widget.Toolbar            android:id="@+id/toolbar"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:minHeight="?attr/actionBarSize"            android:layout_alignParentEnd="true"            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"            android:theme="@style/MyCustomTheme">       </android.support.v7.widget.Toolbar>    </RelativeLayout>   <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"       android:layout_weight="1">        <Button            android:id="@+id/button00"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button01"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button02"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button03"            android:layout_width="0dp"            android:layout_height="match_parent"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:layout_weight="1"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button04"            android:layout_width="0dp"            android:layout_height="match_parent"            android:background="#FFFFFF"            android:layout_weight="1"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>   </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="1">        <Button            android:id="@+id/button10"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button11"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button12"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button13"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button14"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="1">        <Button            android:id="@+id/button20"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button21"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button22"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button23"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>        <Button            android:id="@+id/button24"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="1"            android:background="#FFFFFF"            android:layout_margin="2dp"            android:textSize="@dimen/words_size"            style="?android:attr/borderlessButtonStyle"/>    </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1">            <Button                android:id="@+id/button30"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button31"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button32"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button33"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button34"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1">            <Button                android:id="@+id/button40"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button41"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button42"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button43"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>            <Button                android:id="@+id/button44"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_weight="1"                android:background="#FFFFFF"                android:layout_margin="2dp"                android:textSize="@dimen/words_size"                style="?android:attr/borderlessButtonStyle"/>        </LinearLayout>    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:id="@+id/views"            android:background="@drawable/enclose_buttons">           <Button                android:id="@+id/players"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/Players"               android:textColor="@color/white"               android:textSize="@dimen/words_size"               android:padding="@dimen/border_padding"               style="?android:attr/borderlessButtonStyle"               android:background="@drawable/enclose_buttons"/>            <Button                android:id="@+id/spyMaster"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/Spy_master"                android:textColor="@color/white"                style="?android:attr/borderlessButtonStyle"                android:textSize="@dimen/words_size"                android:padding="@dimen/border_padding"                android:background="@drawable/enclose_buttons"/>        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="horizontal"            android:layout_alignParentEnd="true"            android:layout_alignEnd="@+id/views"            android:background="@drawable/enclose_buttons"            android:padding="@dimen/timer_padding">            <Button                android:id="@+id/timer"                style="?android:attr/borderlessButtonStyle"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="@dimen/words_size"                android:textColor="@color/white" />            <ImageView                android:id="@+id/reset"                android:layout_width="28dp"                android:layout_height="match_parent"                android:contentDescription="@string/desc"                android:src="@drawable/reset" />            <Button                android:id="@+id/start_pause"                style="?android:attr/borderlessButtonStyle"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textSize="@dimen/words_size"                android:textColor="@color/white" />        </LinearLayout>    </RelativeLayout>    </LinearLayout>